<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginTop="2dp">

<!--  First Row-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_weight="1"
        tools:ignore="NestedWeights">

<!--  Back Button-->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"
            app:tint="@color/black"
            android:contentDescription="Back"
            android:padding="5dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/music_universe"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_weight="1" />

 <!--  Favourite Button-->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/favourite_empty_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="5dp"
            app:tint="@android:color/holo_red_dark"
            android:contentDescription="@string/favourites_btn"/>

    </LinearLayout>


    <!--  Current Song Image-->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImgPA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:src="@drawable/music_player_logo_slash_screen"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeWidth="5dp" />


    <!--    Floating Buttons for Previous, Pause, Next-->


    <!--  Current Song Name-->
    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="Song Name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_weight="1">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/previous_icon"
            app:iconSize="40dp"/>


<!--         Play & Pause Button -->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playPauseBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/pause_icon"
            app:iconSize="50dp"
            android:layout_marginHorizontal="25dp"
            app:shapeAppearanceOverlay="@style/curved"
            android:backgroundTint="@android:color/holo_red_dark"
            app:iconTint="@color/white"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/next_icon"
            app:iconSize="40dp"
            />

    </LinearLayout>


<!--    Seekbar & TextViews for it-->
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="25dp"
    android:orientation="horizontal"
    android:layout_margin="20dp"
    android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="00:00"
            android:textColor="@color/black"
            android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:ignore="NestedWeights"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="Loading..."
        android:gravity="center"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/repeat_icon"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/repeat_btn"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/equalizer_icon"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/equalizer_btn"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/timer_icon"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/timer_btn"
            android:layout_weight="1"/>


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share_icon"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/share_btn"
            android:layout_weight="1"/>



    </LinearLayout>


</LinearLayout>